# codeTodoMcp

./: pyproject.toml  todo_mcp.py
todo_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
