[project]
name = "todo_mcp"
version = "0.1.0"
description = "Tiny project to run the TodoServer MCP module via a small 'uv' CLI entrypoint."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=0.1"
]

[project.scripts]
# Installable CLI named `uv` that invokes todo_mcp.main.
# You can then run: uv run todo_mcp.py
uv = "todo_mcp:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["todo_mcp"]